배포 전 Prod 머지 (#488)
* chore: empty main branch with README

* 개발 환경 설정 (#4)

* git init

* build: application.yml, docker file 추가

* TimeSlots 등록 기능 추가 (#6)

* feat: 커스텀 응답 객체 및 공통 엔티티 추가

* feat: timeSlot 엔티티 추가

* feat: timeSlot 엔티티 조회 및 저장 기능 추가

* feat(timeslot): TimeSlot 등록 API 엔드포인트 추가

* 프로젝트 패키지 구조 수정 (#8)

* chore: 저장소 루트 상위 이동, backend/ 디렉터리로 코드 배치

* chore: macOS .DS_Store 무시 규칙 추가

* build: 로컬/도커 환경 환경 변수 분리 (#10)

* TimeSlot 조회 엔드포인트 추가 (#12)

* feat: TimeSlot 조회 API 엔드포인트 추가

- TimeSlot 필드 추가
- TimeSlot 조회 기능 수정

* feat: Room 엔티티 추가

* feat: TimeSlot API 엔드포인트 수정

* 사용자 TimeSlot 조회 엔드포인트 추가 (#14)

* feat: TimeSlot ID 조회 메서드 삭제

* feat: 사용자 이름으로 TimeSlot 조회 API 추가

- 사용자 이름으로 TimeSlot 조회 기능 추가

* TimeSlot 랭킹 조회 API 엔드포인트 추가 (#17)

* feat: TimeSlot 랭킹 조회 API 엔드포인트 추가

* style: 코드 컨벤션 수정

- 변수 final 선언 누락 수정
- 클래스명/필드 간 개행 누락 수정

* refactor: 정적 팩토리 메서드 추가

* refactor: TotalTimeSlotCount 날짜/시간 별 개수 카운트 메서드명 수정

- addTimeSlot -> updateTimeSlotCount

* Room 생성 API 엔드포인트 추가 (#19)

* feat: Room 엔티티 필드 추가

- 기존 session 만 있던 필드에서, title, availableDates, startTime, endTime 필드 추가

* feat: Room Repository 인터페이스 및 JPA 구현

* feat: RoomService 저장 기능 추가

* feat: Room 저장 API 엔드포인트 추가

* test: Room 저장 시 올바른 UUID 반환 여부 테스트

* refactor: UUID 생성 위치 정적 팩토리 메서드로 변경

* refactor: 엔티티 필드 @Column 어노테이션 및 개행 추가

* feat: 엔티티 생성 검증 로직 추가

- Date: 빈 리스트로 받거나, 각각의 date가 현재 이전인경우

- Time: 30분 간격이 아니거나, startTime이 endTime 이후인 경우

* test: 엔티티 생성 검증 로직 테스트 추가

- Date: 빈 리스트로 받거나, 각각의 date가 현재 이전인경우

- Time: 30분 간격이 아니거나, startTime이 endTime 이후인 경우

* refactor: 불필요한 생성자 및 정적 팩토리 메서드 제거

* Discord SlashCommand Registrar/Listener 추가 (#21)

* build: 디스코드 의존성 추가

- apache commons collections 필요

* feat: discord slashCommand listener 추가

- /schedule room_name {room_name}
- event.channel을 이용해서 room과 연결할 예정

* feat: discord slashCommand registrar 추가

- (방 생성) /schedule room_name {room_name}
- 개발 환경을 위해 빠르게 명령어 갱신이 되도록 특정 길드 설정

* feat: discord config 추가

* feat: discord service 추가

- 메시지 전송 예시 메서드